--- a/web/menu.xhtml
+++ b/web/menu.xhtml
@@ -34,6 +34,7 @@
                                     <p:menuitem value="Registar Equipamento"  action="#{menuBean.chooseLink('equipamento-registar.xhtml')}" ajax="false"/>
                                     <p:menuitem value="Listar de Equipamento" action="#{menuBean.chooseLink('equipamento-listar.xhtml')}"   ajax="false"/>
                                     <p:menuitem value="Relatorio"             url="#" />
+                                    <p:menuitem value="Registar Usuario"      action="#{menuBean.chooseLink('usuario-registar.xhtml')}"   ajax="false"/>
                                 </p:submenu>
                         
                         <p:submenu label="">
