--- a/web/equipamento-registar_1.xhtml
+++ b/web/equipamento-registar_1.xhtml
@@ -31,7 +31,7 @@
                                         <h:outputText value="#{itemBean.tipo}"/>
                                                                             
                                         <h:outputLabel for="marca" value="Marca" />
-                                        <p:inputText id="marca" value="#{itemBean.marca}" required="true" label="Marca"  pl/>
+                                        <p:inputText id="marca" value="#{itemBean.marca}" required="true" label="Marca" />
 
                                         <h:outputLabel for="processador" value="Processador" />
                                         <p:inputText id="processador" value="#{itemBean.processador}" required="true" label="Processador" />
