Adding login.jsf

--- a/web/menu-item.xhtml
+++ b/web/menu-item.xhtml
@@ -16,7 +16,7 @@
                     <ui:repeat value="#{menuBean.items}" var="item">
                         <li class="xxx-xxx"><a id="#{item.xhtml}" href="#{item.xhtml}">#{item.descricao}</a></li>
                     </ui:repeat>
-                    <li class="xxx-xxx"><a id="logout" href="logout.jsf">Sair</a></li>
+                    <li class="xxx-xxx"><a id="logout" href="login.jsf">Sair</a></li>
                 </h:form>
                
             </ui:define>
