--- a/web/equipamento-registar.xhtml
+++ b/web/equipamento-registar.xhtml
@@ -90,20 +90,8 @@
                         </tr>
                          <tr>
                             <td>Serial Number</td>
-                             <td><h:inputText id="serialNumber" class="" /></td>
-                        </tr>
-                        <tr>
-                            <td>Ano de Fabrico</td>
-                            <td>
-                                <select id="anoFabrico" style="width: 430px;">
-                                    <option value="0">Selecione</option>
-                                    <c:forEach var="category" items="#{itemBean.anoFabricoList}" > 
-                                        <option value="${category}">${category}</option>
-                                    </c:forEach>
-                                </select>
-                            </td>
-                        </tr>
-                      
+                            <td><h:inputText id="serialNumber"  value="#{itemBean.item.material.serialNumber}" class=""/></td>
+                        </tr>                      
                         <tr>
                             <td>Ano de Fabrico</td>
                             <td><input type="text"  name="anoFabrico" value="${orderValue}"/></td>
